{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 773,
  "lineage": "6fa5f66f-27cc-d2b0-a529-9116eb8ece7c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/networkInterfaces/lab03s2-db1-u-vm1-nic1",
            "internal_domain_name_suffix": "m3yfemnzmd0u5huaqy2tmf5z3b.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "lab03s2-db1-u-vm1-ipconfig11",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/lab03s2-db1-u-vm1-pip2",
                "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet01"
              }
            ],
            "location": "canadaeast",
            "name": "lab03s2-db1-u-vm1-nic1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "terraformrg",
            "tags": {
              "ContactEmail": "n01516507@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "project": "Learing"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.linux_pip",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet",
            "azurerm_subnet_network_security_group_association.subnet_association",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/networkInterfaces/lab03s2-db1-u-vm1-nic2",
            "internal_domain_name_suffix": "m3yfemnzmd0u5huaqy2tmf5z3b.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "lab03s2-db1-u-vm1-ipconfig12",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/lab03s2-db1-u-vm1-pip1",
                "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet01"
              }
            ],
            "location": "canadaeast",
            "name": "lab03s2-db1-u-vm1-nic2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "terraformrg",
            "tags": {
              "ContactEmail": "n01516507@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "project": "Learing"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.linux_pip",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet",
            "azurerm_subnet_network_security_group_association.subnet_association",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/Network-nsg1",
            "location": "canadaeast",
            "name": "Network-nsg1",
            "resource_group_name": "terraformrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/Network-nsg2",
            "location": "canadaeast",
            "name": "Network-nsg2",
            "resource_group_name": "terraformrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linux_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "domain_name_label": "lab03s2-db1-u-vm11",
            "fqdn": "lab03s2-db1-u-vm11.canadaeast.cloudapp.azure.com",
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/lab03s2-db1-u-vm1-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "lab03s2-db1-u-vm1-pip1",
            "resource_group_name": "terraformrg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01516507@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "project": "Learing"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "domain_name_label": "lab03s2-db1-u-vm12",
            "fqdn": "lab03s2-db1-u-vm12.canadaeast.cloudapp.azure.com",
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/publicIPAddresses/lab03s2-db1-u-vm1-pip2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "lab03s2-db1-u-vm1-pip2",
            "resource_group_name": "terraformrg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01516507@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "project": "Learing"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet01",
            "name": "network-subnet01",
            "resource_group_name": "terraformrg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet02",
            "name": "network-subnet02",
            "resource_group_name": "terraformrg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet01",
            "network_security_group_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/Network-nsg1",
            "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet01"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet02",
            "network_security_group_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/networkSecurityGroups/Network-nsg2",
            "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet02"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg2",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "31527067-60b9-4ff5-9e80-86393617f9e9",
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/terraformrg/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadaeast",
            "name": "network-vnet",
            "resource_group_name": "terraformrg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    }
  ]
}